# odoo-utils

./: .pre-commit-config.yaml  README.md  __manifest__.py  pyproject.toml
