[project]
name = "odoo-utils"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "hglong16", email = "intihad.vuong@gmail.com" }
]
dependencies = ["pylint-odoo~=8.0.19"]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
